fix content overlaping

--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -6,7 +6,6 @@
         display: flex;
         justify-content: flex-end;
         padding-bottom: 100px;
-        padding-top: 15px;
 
         .ant-carousel{
             width: 70% !important;
